; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_relation.c_logicalrep_relmap_init.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/replication/logical/extr_relation.c_logicalrep_relmap_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i8* }

@LogicalRepRelMapContext = common dso_local global i8* null, align 8
@CacheMemoryContext = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"LogicalRepRelMapContext\00", align 1
@ALLOCSET_DEFAULT_SIZES = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [30 x i8] c"logicalrep relation map cache\00", align 1
@HASH_ELEM = common dso_local global i32 0, align 4
@HASH_BLOBS = common dso_local global i32 0, align 4
@HASH_CONTEXT = common dso_local global i32 0, align 4
@LogicalRepRelMap = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [26 x i8] c"logicalrep type map cache\00", align 1
@LogicalRepTypMap = common dso_local global i8* null, align 8
@logicalrep_relmap_invalidate_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @logicalrep_relmap_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @logicalrep_relmap_init() #0 {
  %1 = alloca %struct.TYPE_4__, align 8
  %2 = load i8*, i8** @LogicalRepRelMapContext, align 8
  %3 = icmp ne i8* %2, null
  br i1 %3, label %8, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @CacheMemoryContext, align 4
  %6 = load i32, i32* @ALLOCSET_DEFAULT_SIZES, align 4
  %7 = call i8* @AllocSetContextCreate(i32 %5, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %6)
  store i8* %7, i8** @LogicalRepRelMapContext, align 8
  br label %8

8:                                                ; preds = %4, %0
  %9 = call i32 @MemSet(%struct.TYPE_4__* %1, i32 0, i32 16)
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  store i32 4, i32* %10, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 1
  store i32 4, i32* %11, align 4
  %12 = load i8*, i8** @LogicalRepRelMapContext, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 2
  store i8* %12, i8** %13, align 8
  %14 = load i32, i32* @HASH_ELEM, align 4
  %15 = load i32, i32* @HASH_BLOBS, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @HASH_CONTEXT, align 4
  %18 = or i32 %16, %17
  %19 = call i8* @hash_create(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.1, i64 0, i64 0), i32 128, %struct.TYPE_4__* %1, i32 %18)
  store i8* %19, i8** @LogicalRepRelMap, align 8
  %20 = call i32 @MemSet(%struct.TYPE_4__* %1, i32 0, i32 16)
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 0
  store i32 4, i32* %21, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 1
  store i32 4, i32* %22, align 4
  %23 = load i8*, i8** @LogicalRepRelMapContext, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %1, i32 0, i32 2
  store i8* %23, i8** %24, align 8
  %25 = load i32, i32* @HASH_ELEM, align 4
  %26 = load i32, i32* @HASH_BLOBS, align 4
  %27 = or i32 %25, %26
  %28 = load i32, i32* @HASH_CONTEXT, align 4
  %29 = or i32 %27, %28
  %30 = call i8* @hash_create(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.2, i64 0, i64 0), i32 2, %struct.TYPE_4__* %1, i32 %29)
  store i8* %30, i8** @LogicalRepTypMap, align 8
  %31 = load i32, i32* @logicalrep_relmap_invalidate_cb, align 4
  %32 = call i32 @CacheRegisterRelcacheCallback(i32 %31, i32 0)
  ret void
}

declare dso_local i8* @AllocSetContextCreate(i32, i8*, i32) #1

declare dso_local i32 @MemSet(%struct.TYPE_4__*, i32, i32) #1

declare dso_local i8* @hash_create(i8*, i32, %struct.TYPE_4__*, i32) #1

declare dso_local i32 @CacheRegisterRelcacheCallback(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
